--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "crodity-react": "https://github.com/ivmarcos/crodity-react.git",
+    "history": "^4.6.3",
     "meteor-node-stubs": "~0.2.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
