--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "history": "^4.6.3",
+    "material-ui": "^0.19.1",
+    "material-ui-fullscreen-dialog": "^0.7.1",
     "meteor-node-stubs": "~0.2.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-masonry-component": "^5.0.7",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2"
   },
